# anthill-game-engine-RIP-03.07.2021

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Defines.hpp  README.md  main.cpp
CMake/: CMakeLists.txt
CMake/resource/: main_config.json
CMake/scripts/: copy_files.go
Core/: ATCore.hpp  main.cpp
Core/GuiSystem/RenderSystem/: ATRenderProvider.hpp  ATRenderProviderBuilder.hpp
Core/GuiSystem/RenderSystem/RenderProviderImplementation/: ATOpenglRenderProvider.cpp  ATOpenglRenderProvider.hpp  ATRenderProviderExceptions.hpp
Core/GuiSystem/Types/: ATImage.cpp  ATImage.hpp  ATRect.hpp  ATVector.hpp
Core/GuiSystem/WindowSystem/: ATPreloadWindowInitializeSettings.cpp  ATPreloadWindowInitializeSettings.hpp  ATWindowContext.hpp  ATWindowInitializeSettings.cpp  ATWindowInitializeSettings.hpp  ATWindowManager.cpp  ATWindowManager.hpp
Core/WindowSystem/: ATPreloadWindowInitializeSettings.hpp  ATWindowContext.hpp  ATWindowInitializeSettings.cpp  ATWindowInitializeSettings.hpp  ATWindowManager.cpp  ATWindowManager.hpp
Tests/: CMakeLists.txt  SharedIncludes.hpp  test.cpp
Tests/Utils_tests/: ConfigSystem_tests.hpp  Logger_tests.hpp  SharedUtilsInclude.hpp
Utils/: Utils.hpp
Utils/ConfigManager/: ATConfig.cpp  ATConfig.hpp  ATConfigManager.cpp  ATConfigManager.hpp  ATConfigParsingStrategy.cpp  ATConfigParsingStrategy.hpp  ATConfigSource.cpp  ATConfigSource.hpp
Utils/ConfigSystem/: ATConfig.cpp  ATConfig.hpp  ATConfigManager.cpp  ATConfigManager.hpp  ATConfigParsingStrategy.cpp  ATConfigParsingStrategy.hpp  ATConfigSource.cpp  ATConfigSource.hpp
Utils/Guid/: ATDebugGuid.hpp  ATGuid.hpp  ATGuidExceptions.hpp  ATGuidFabric.hpp
Utils/Include/: ATDefineExtensions.hpp  ATLogger.hpp
Utils/LogSystem/: ATLogger.cpp  ATLogger.hpp  ATLoggerContext.hpp  ATLoggerDefineExtensions.hpp  ATLoggerEvent.hpp  ATLoggerExceptions.hpp  ATLoggerManager.cpp  ATLoggerManager.hpp  ATLoggerStrategy.cpp  ATLoggerStrategy.hpp
Utils/Logger/: ATLogger.cpp  ATLogger.hpp  ATLoggerContext.hpp  ATLoggerDefineExtensions.hpp  ATLoggerEvent.hpp  ATLoggerManager.cpp  ATLoggerManager.hpp  ATLoggerStrategy.cpp  ATLoggerStrategy.hpp
Utils/Source/: ATLogger.cpp
Utils/Types/: ATColor.cpp  ATColor.hpp  ATString.cpp  ATString.hpp
anthill-game-engine/: CMakeLists.txt  anthill-game-engine.cpp  anthill-game-engine.hpp
anthill-game-engine-core/: CMakeLists.txt
anthill-game-engine-core/engine-core/: ATEngineCore.cpp  ATEngineCore.hpp  ATEngineCoreContext.hpp  ATEngineCoreFabric.hpp
anthill-game-engine-core/engine-core/core/windows/: ATWindowsCore.cpp  ATWindowsCore.hpp  ATWindowsCoreConfig.hpp
anthill-game-engine-core/gui-system/draw-types/: ATArea.hpp  ATImage.cpp  ATImage.hpp  ATRect.hpp
anthill-game-engine-core/gui-system/render-system/: ATRenderProvider.hpp  ATRenderProviderBuilder.hpp
anthill-game-engine-core/gui-system/render-system/directx12-render-provider/: ATDirectX12RenderProvider.cpp  ATDirectX12RenderProvider.hpp
anthill-game-engine-core/gui-system/render-system/directx12-render-provider/dx-call-wrappers/: DXExceptions.hpp  DXExtensions.cpp  DXExtensions.hpp  DXGIExtensions.cpp  DXGIExtensions.hpp  DXShared.cpp  DXShared.hpp
anthill-game-engine-core/gui-system/render-system/opengl-render-provider/: ATOpenglExceptions.hpp  ATOpenglRenderProvider.cpp  ATOpenglRenderProvider.hpp
anthill-game-engine-core/gui-system/widgets/: ATFrameWidget.cpp  ATFrameWidget.hpp  ATImageWidget.cpp  ATImageWidget.hpp  ATWidget.hpp  ATWidgetAttributes.hpp  ATWidgetCallback.hpp  ATWidgetExceptions.hpp  ATWidgetShared.hpp  ATWidgetsTreeBuilder.hpp
anthill-game-engine-core/gui-system/window-system/: ATWindow.hpp  ATWindowInitializeSettings.cpp  ATWindowInitializeSettings.hpp  ATWindowManager.cpp  ATWindowManager.hpp  ATWindowSystemConfig.hpp  ATWindowSystemExceptions.hpp
anthill-game-engine-utils/: CMakeLists.txt
anthill-game-engine-utils/guid/: ATGuid.hpp
anthill-game-engine-utils/log-system/: ATLogMsg.hpp  ATLogger.cpp  ATLogger.hpp  ATLoggerContext.hpp  ATLoggerEvent.hpp  ATLoggerExceptions.hpp  ATLoggerManager.cpp  ATLoggerManager.hpp  ATLoggerStrategy.hpp
anthill-game-engine-utils/log-system/log-strategy/: ATConsoleLogStrategy.cpp  ATConsoleLogStrategy.hpp  ATFileLogStrategy.cpp  ATFileLogStrategy.hpp  ATLoggerStrategyUtils.cpp  ATLoggerStrategyUtils.hpp
anthill-game-engine-utils/types/: ATColor.hpp  ATString.cpp  ATString.hpp
resource/: window_system.cfg.json  windows_core.cfg.json
scripts/: copy_files.go
third_party_libs/boost_1_75_0/stage/lib/: boost_unit_test_framework-vc142-mt-gd-x32-1_75.lib  boost_unit_test_framework-vc142-mt-gd-x64-1_75.lib  boost_unit_test_framework-vc142-mt-x32-1_75.lib  boost_unit_test_framework-vc142-mt-x64-1_75.lib
СMake/: CMakeLists.txt
СMake/resource/: main_config.json
СMake/scripts/: copy_files.go
